--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
+    //Added manually
     compile 'com.android.support:design:23.2.0'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.google.code.gson:gson:2.2.4'
+}
+
+repositories {
+    mavenCentral()
 }
