--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     //Added manually
     compile 'com.android.support:design:23.2.0'
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
 }
 
 repositories {
