--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
     //Added manually
+    compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.android.support:support-v4:23.2.0'
 }
 
 repositories {
