--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".LoginActivity" />
-        <activity
-            android:name=".MyNavigationDrawer"
-            android:label="@string/app_name"
-            android:theme="@style/MyNavigationDrawerTheme"></activity>
-        <activity android:name=".RegistraActivity" />
-        <activity android:name=".SettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".MyNavigationDrawer"
+            android:label="@string/app_name"
+            android:theme="@style/MyNavigationDrawerTheme" />
+        <activity android:name=".RegistraActivity" />
+        <activity android:name=".CreateNewEventActivity"></activity>
     </application>
 
 </manifest>
