--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+//    compile project(':volley')
 
 }
 
