--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
-//    compile project(':volley')
-
+    compile 'com.github.machinarius:preferencefragment:0.1.1'
 }
 
 repositories {
