--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
 
 repositories {
