--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="it.cnvcrew.sonar">
+    package="it.cnvcrew.sonar" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MainActivity" >
         </activity>
         <activity android:name=".LoginActivity" />
         <activity
@@ -22,12 +22,16 @@
         <activity android:name=".CreateNewEventActivity" />
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/AppThemeSplash">
+            android:theme="@style/AppThemeSplash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".PositionActivity"
+            android:label="@string/title_activity_position" >
         </activity>
     </application>
 
