--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-}
+    compile 'com.google.android.gms:play-services:8.4.0'}
 
 repositories {
     mavenCentral()
