--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "it.cnvcrew.sonar"
@@ -33,7 +33,10 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.google.android.gms:play-services:8.4.0'}
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.github.medyo:android-about-page:1.0.7'
+
+}
 
 repositories {
     mavenCentral()
