Changes EditTexts and AboutPage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.github.medyo:android-about-page:1.0.7'
+    compile 'com.github.florent37:materialtextfield:1.0.3@aar'
+
 
 }
 
