--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,16 @@
         android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity" >
         </activity>
-        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/LoginRegisterTheme" />
         <activity
             android:name=".MyNavigationDrawer"
             android:label="@string/app_name"
             android:theme="@style/MyNavigationDrawerTheme" />
-        <activity android:name=".RegistraActivity" />
+        <activity
+            android:name=".RegistraActivity"
+            android:theme="@style/LoginRegisterTheme" />
         <activity android:name=".CreateNewEventActivity" />
         <activity
             android:name=".SplashActivity"
