--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,28 +39,30 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     //Added manually
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
-    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
-    compile 'com.github.machinarius:preferencefragment:0.1.1'
+    //compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.android.gms:play-services:9.0.0'
     compile 'com.github.medyo:android-about-page:1.0.7'
     compile 'com.github.florent37:materialtextfield:1.0.3@aar'
     compile 'com.github.mrengineer13:snackbar:1.2.0'
-    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
-    compile 'com.lambdaworks:lettuce:2.3.3'
+    //compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    //compile 'com.lambdaworks:lettuce:2.3.3'
     compile 'com.google.firebase:firebase-messaging:9.0.0'
     compile 'com.google.firebase:firebase-core:9.0.0'
     compile 'com.google.firebase:firebase-crash:9.0.0'
     compile 'com.google.firebase:firebase-analytics:9.0.0'
-
+    compile 'com.yarolegovich:mp:1.0.5'
+    //compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
+    compile 'ch.hsr:geohash:1.3.0'
+    testCompile 'junit:junit:4.12'
 }
 
 repositories {
