--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     signingConfigs {
     }
     compileSdkVersion 23
-    buildToolsVersion "24.0.0-rc3"
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "it.cnvcrew.sonar"
         minSdkVersion 16
@@ -56,6 +56,7 @@ dependencies {
     //compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     compile 'ch.hsr:geohash:1.3.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:23.0.0'
 }
 
 repositories {
