--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //Added manually
-    //compile 'com.github.machinarius:preferencefragment:0.1.1'
-    //compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
-    //compile 'com.lambdaworks:lettuce:2.3.3'
-    //compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
@@ -44,9 +40,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    //compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.github.medyo:android-about-page:1.0.7'
     compile 'com.github.florent37:materialtextfield:1.0.3@aar'
     compile 'com.github.mrengineer13:snackbar:1.2.0'
@@ -58,11 +53,12 @@ dependencies {
     compile 'ch.hsr:geohash:1.3.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.github.devlight.navigationtabbar:library:+'
+    compile 'com.google.android.gms:play-services:9.0.2'
+    compile 'com.android.support:support-v4:23.4.0'
 }
 
 repositories {
     mavenCentral()
 }
 
-apply plugin: 'com.google.gms.google-services'
+
