--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "it.cnvcrew.sonar"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 1
-        versionName '0.2'
+        versionCode 2
+        versionName '0.9-rc1'
         multiDexEnabled true
     }
     buildTypes {
@@ -31,16 +31,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     //Added manually
     testCompile 'junit:junit:4.12'
+    //compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.android.support:support-v4:23.4.0'
-    //compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.github.medyo:android-about-page:1.0.7'
     compile 'com.github.florent37:materialtextfield:1.0.3@aar'
@@ -54,11 +55,15 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.android.gms:play-services:9.0.2'
-    compile 'com.android.support:support-v4:23.4.0'
 }
 
 repositories {
     mavenCentral()
 }
+
+
+
+
+
 
 
